--- a/src/sass/elements/_modal.sass
+++ b/src/sass/elements/_modal.sass
@@ -78,7 +78,6 @@ $formPaddings: 10px
         align-items: stretch
         justify-content: stretch
         margin-bottom: $formPaddings
-        //max-width: calc(#{$formPaddings} + #{$inputWidth * 2})
 
       &_bottom
         display: flex
@@ -101,7 +100,6 @@ $formPaddings: 10px
         display: flex
         flex-direction: row
         flex: 1
-        width: 50%
         align-items: stretch
         justify-content: stretch
 
